--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@prisma/client": "^5.11.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@react-hook/throttle": "^2.2.0",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "dotenv": "^16.4.5",
+    "embla-carousel-react": "^8.0.2",
     "lucide-react": "^0.363.0",
     "next": "14.1.4",
     "next-auth": "^5.0.0-beta.16",
@@ -30,6 +32,7 @@
     "resend": "^3.2.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.0",
     "uuid": "^9.0.1",
     "ws": "^8.16.0",
     "zod": "^3.22.4"
