--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@neondatabase/serverless": "^0.9.0",
     "@prisma/adapter-neon": "^5.11.0",
     "@prisma/client": "^5.11.0",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-slot": "^1.0.2",
     "@react-hook/throttle": "^2.2.0",
     "bcrypt": "^5.1.1",
@@ -39,7 +41,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
-    "@types/node": "^20",
+    "@types/node": "^20.14.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.8",
@@ -50,6 +52,6 @@
     "postcss": "^8",
     "prisma": "^5.11.0",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5.5.3"
   }
 }
