--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.0.2",
     "lucide-react": "^0.363.0",
-    "next": "14.1.4",
+    "next": "^14.2.14",
     "next-auth": "^5.0.0-beta.16",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.2",
     "react-spinners": "^0.13.8",
     "resend": "^3.2.0",
