--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "use-debounce": "^10.0.0",
     "uuid": "^9.0.1",
     "ws": "^8.16.0",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
